[package]
name = "realcommerce2"
version = "0.1.0"
authors = ["Jomaro Rodrigues <jomaro.rodrigues@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "1.0", features = ["ssl"] }
openssl = { version = "0.10", features = ["v110"] }
